# bio2bel-cookiecutter

./: .bumpversion.cfg  .travis.yml  README.md  README.rst  cookiecutter.json  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst
src/bio2bel_{{ bio2bel.module_name }}/: __init__.py  __main__.py  cli.py  constants.py  manager.py  models.py
{{cookiecutter.module_name}}/: .bumpversion.cfg  .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
{{cookiecutter.module_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.module_name}}/src/bio2bel_{{ cookiecutter.module_name }}/: __init__.py  __main__.py  cli.py  constants.py  manager.py  models.py  parser.py  version.py
{{cookiecutter.module_name}}/tests/: __init__.py  cases.py  constants.py
