##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel_{{ cookiecutter.module_name }}
version = 0.0.1-dev
url = https://github.com/bio2bel/{{ cookiecutter.module_name }}
download_url = https://github.com/bio2bel/{{ cookiecutter.module_name }}/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/{{ cookiecutter.module_name }}/issues
    Source Code = https://github.com/bio2bel/{{ cookiecutter.module_name }}
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics
license = MIT
license_file = LICENSE
description = Bio2BEL {{ cookiecutter.module_stylized }}.
long_description = file: README.rst
keywords =
    Biological Expression Language
    Bio2BEL

[options]
install_requires =
    bio2bel
    pybel
    sqlalchemy
    tqdm
python_requires = >=3.6
packages = find:
package_dir =
    = src
zip-safe = false

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bio2bel_{{ cookiecutter.module_name }} = bio2bel_{{ cookiecutter.module_name }}.cli:main

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
python-tag = py36
