##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel_{{ cookiecutter.module_name }}
version = 0.0.1-dev
description = {{ cookiecutter.short_description }}
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/bio2bel/{{ cookiecutter.module_name }}
download_url = https://github.com/bio2bel/{{ cookiecutter.module_name }}/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/{{ cookiecutter.module_name }}/issues
    Source Code = https://github.com/bio2bel/{{ cookiecutter.module_name }}

# Author information
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
maintainer = {{ cookiecutter.author }}
maintainer_email = {{ cookiecutter.author_email }}

# License information
license = MIT
license_file = LICENSE

# Search information
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Biological Expression Language
    Bio2BEL

[options]
install_requires =
    bio2bel
    pybel
    sqlalchemy
    tqdm
python_requires = >=3.6
packages = find:
package_dir =
    = src
zip-safe = false

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bio2bel_{{ cookiecutter.module_name }} = bio2bel_{{ cookiecutter.module_name }}.cli:main
bio2bel =
    {{ cookiecutter.module_name }} = bio2bel_{{ cookiecutter.module_name }}

[options.packages.find]
where = src

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bio2bel_{{ cookiecutter.module_name }}

[coverage:paths]
source =
    src/bio2bel_{{ cookiecutter.module_name }}
    .tox/*/lib/python*/site-packages/bio2bel_{{ cookiecutter.module_name }}

[coverage:report]
show_missing = True
